[tool.poetry]
name = "hemli_app"
version = "0.0.1"
description = "keep it hemli"
authors = ["sloev"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.0"
asyncpg = "^0.20.1"
PyJWT = "^1.7.1"
uvicorn = "^0.11.3"
shortuuid = "^1.0.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
